tests/miniJava/neg/006619_mutation.MiniJava
class java { public static void Main ( String static [ ] java ) { { } } }
